web/src/style.css
/* Fight Bootstrap */
input {
    font-size: 0.8em;
}
body {
    font-family: initial;
    font-size: initial;
    line-height: initial;
}

body {
    color: #cccccc;
    background-color: #080808;
}

#game-controller {
    position: absolute;
    left: 25px;
    top: 150px;
    width: 250px;
}

#state-controller {
    position: absolute;
    left: 25px;
    top: 350px;
    width: 250px;
}

#actions-bar {
    position: absolute;
    top: 75px;
    left: 50%;
    transform: translate(-50%);
    width: 300px;
    text-align: center;
}

/* actions bar slimmer */
#actions-bar.control-box {
    padding-bottom: 10px;
}
#actions-bar .control-header {
    margin-bottom: 10px;
}

.control-box {
    border: 1px solid #cccccc;
    border-radius: .2em;
    font-family: "Segoe UI","Helvetica Neue",Arial,sans-serif;
    background-color: #202020;
    padding-bottom: 20px;
}

.control-header {
    border-bottom: 1px solid #cccccc;
    font-size: 0.7em;
    text-align: center;
    margin-bottom: 20px;
}

.control-box label {
    display: block;
    margin-top: 5px;
    margin-bottom: 5px;
}
.control-box .label {
    display: inline-block;
    text-align: right;
    margin-left: 30px;
    margin-right: 30px;
    width: 50px;
    font-size: 1.0em;
}
.control-box input[type=text] {
    width: 100px;
    height: 26px;
    background-color: #ced4da;
    color: #202020;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    padding: 3px 0px 3px 10px;
    outline: none;
}
.control-box input[type=text]:focus {
    box-shadow: 0 0 5px #d07030;
    border: 1px solid #d07030;
}
.control-box .simple-action input[type=submit] {
    width: 75px;
}

.control-box .control-group {
    text-align: center;
}

.control-box .control-group form {
    display: inline-block;
}

input[type=submit] {
    color: #cccccc;
    border: 1px solid #cccccc;
    background-color: #202020;
    padding: 5px 15px 5px 15px;
    font-size: 0.7em;
    margin: 3px;
}
input[type=submit]:disabled {
    color: #808080;
    border: 1px solid #808080;
}
input[type=submit]:hover:not([disabled]) {
    border: 1px solid #d07030;
    box-shadow: 0 0 5px #d07030;
}

#table-viewport {
    width: 800px;
    height: 600px;
    position: relative;
    left: 50%;
    transform: translate(-50%);
}
#game-canvas {
    width: 100%;
    height: 100%;
}

#root-container {
    padding-right: 275px;
    padding-left: 275px;
}

#root {
    min-width: 800px;
    /* width: 800px; */
    /* height: 600px; */
    /* margin: auto; */
    /* margin-top: 20px; */
    /* vertical-align: middle; */
}

#attrib {
    position: fixed;
    left: 10px;
    bottom: 10px;
    color: #202020;
}
#attrib a {
    color: #444444;
}

svg text {
    fill: #cccccc;
}
svg .pot text{
    fill: #202020;
}

.dark-toast {
    background-color: #202020;
    color: #cccccc;
    border: 1px solid #3c3c3c;
    min-height: 32px;
}

